8139040: Fix initializations before ShouldNotReachHere() etc. and enable -Wuninitialized on linux

Reviewed-by: stuefe, coleenp, roland